Completes implementation of the 8-bit load group.

--- a/src/libs/Components/CMakeLists.txt
+++ b/src/libs/Components/CMakeLists.txt
@@ -12,6 +12,7 @@ set(${PROJECT_NAME}_DOXYGEN
 # TODO : list .h files here. 
 # Helpful windows command : dir /b /oen
 set(${PROJECT_NAME}_HEADERS
+    Memory.h
     z80.h
 )
 
