Refactors the 'step' logic to instantiate templated instruction classes, allowing to better reuse the decode step.

--- a/src/apps/CMakeLists.txt
+++ b/src/apps/CMakeLists.txt
@@ -2,7 +2,7 @@
 ## CMakeLists.txt
 ## #################################################################
 
-# TODO : add the subdirectories to compile
-#add_subdirectory(__)
+add_subdirectory(Tests)
+
 # OR from cmc-macros
 #conditional_add_subdirectory(xxx DEPENDS yyy zzz OPTIONS BUILD_xxx)
